@@ -38,6 +38,12 @@ If you want to tweak the way marks are collected you can customise
 ~dired-rsync-source-files~ and provide your own function to return a
 list of fully qualified names to include in the command.
 
+From time to time the call to rsync may fail. dired-rsync keeps the
+process buffer around for debugging and reports to the console. You
+can customise ~dired-rsync-failed-hook~ with your own hook function or
+select the more aggressive ~dired-rsync--pop-to-rsync-failed-buf~ to
+pop straight to the buffer.
+
 The options ~dired-rsync-command~ and ~dired-rsync-options~ are there
 to modify the call to rsync but a user is unlikely to need to tweak
 these.
